corrected scale position on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1066,6 +1066,13 @@ div.grid-wrappers {
   #mode-distribution {
     display: none;
   }
+
+  #svgScale{
+    position: fixed;
+    right: 0;
+    top: 0;
+    margin: 1em 1em 0 0;
+  }
 }
 
 #origem-block{
